<resources>
    <string name="app_name">M_Events</string>
    <string name="facebook_app_id">1155470914574501</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">Profile</string>
    <string name="Favorite_Music">Favorite Music</string>
    <string name="Favorite_Artist">Favorite Artists</string>
    <string name="top_artists">Top Artists</string>
    <string name="top_songs">Top Songs</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_maps">Map</string>

</resources>
